package entities;

public class Adm {

    private int numeroAcesso;
    private String senhaAdm;




    
}
